--- a/ios/SaveTheBird/SaveTheBird/Base.lproj/Main.storyboard
+++ b/ios/SaveTheBird/SaveTheBird/Base.lproj/Main.storyboard
@@ -54,7 +54,19 @@
                     <view key="view" contentMode="scaleToFill" id="t1m-QL-yIs">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ゲーム画面です" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wtP-va-sAI">
+                                <rect key="frame" x="241" y="290" width="119" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="wtP-va-sAI" firstAttribute="centerX" secondItem="t1m-QL-yIs" secondAttribute="centerX" id="Niq-WK-wJL"/>
+                            <constraint firstItem="wtP-va-sAI" firstAttribute="centerY" secondItem="t1m-QL-yIs" secondAttribute="centerY" id="zvN-Ej-d3w"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="N9f-Wy-4HS" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -73,14 +85,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="bird_maruitori" translatesAutoresizingMaskIntoConstraints="NO" id="dFO-YT-Pe0">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="A3f-wh-6qN">
                                 <rect key="frame" x="148" y="155" width="304" height="290"/>
-                            </imageView>
+                                <state key="normal" backgroundImage="bird_maruitori"/>
+                                <connections>
+                                    <segue destination="88d-AR-ps5" kind="modal" id="7lS-wQ-fL4"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="dFO-YT-Pe0" firstAttribute="centerX" secondItem="YVX-2g-Sov" secondAttribute="centerX" id="DeO-Oi-Suq"/>
-                            <constraint firstItem="dFO-YT-Pe0" firstAttribute="centerY" secondItem="YVX-2g-Sov" secondAttribute="centerY" id="pbV-Ox-MtJ"/>
+                            <constraint firstItem="A3f-wh-6qN" firstAttribute="centerY" secondItem="YVX-2g-Sov" secondAttribute="centerY" id="BgN-G8-Xrs"/>
+                            <constraint firstItem="A3f-wh-6qN" firstAttribute="centerX" secondItem="YVX-2g-Sov" secondAttribute="centerX" id="xdd-Om-8ln"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Home" id="oZd-X3-a7S"/>
