画面構成追加

--- a/android/SaveTheBird/app/src/main/res/layout/activity_game.xml
+++ b/android/SaveTheBird/app/src/main/res/layout/activity_game.xml
@@ -7,15 +7,23 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@color/colorWhite"
-    tools:context="com.latte_project.stb.savethebird.MainActivity">
+    tools:context="com.latte_project.stb.savethebird.GameActivity">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/title"
-        android:layout_marginTop="163dp"
-        android:textSize="36dp"
-        android:layout_alignParentTop="true"
+        android:text="ゲーム画面です"
+        android:id="@+id/textView"
+        android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="メニュー"
+        android:id="@+id/menuBtn"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="48dp"
+        android:onClick="onClick" />
 </RelativeLayout>
