--- a/android/SaveTheBird/app/src/main/res/layout/activity_character_select.xml
+++ b/android/SaveTheBird/app/src/main/res/layout/activity_character_select.xml
@@ -8,14 +8,6 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@color/colorWhite"
-    tools:context="com.latte_project.stb.savethebird.MainActivity">
+    tools:context="com.latte_project.stb.savethebird.CharacterSelectActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/title"
-        android:layout_marginTop="163dp"
-        android:textSize="36dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
 </RelativeLayout>
