--- a/ios/SaveTheBird/SaveTheBird/Base.lproj/Main.storyboard
+++ b/ios/SaveTheBird/SaveTheBird/Base.lproj/Main.storyboard
@@ -5,6 +5,14 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
+        <!--Page View Controller-->
+        <scene sceneID="Rg4-Tl-zly">
+            <objects>
+                <pageViewController autoresizesArchivedViewToFullSize="NO" transitionStyle="pageCurl" navigationOrientation="horizontal" spineLocation="min" id="P9M-qC-cTD" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="l7o-9M-w4y" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-3108" y="995"/>
+        </scene>
         <!--Charactor-->
         <scene sceneID="Ao6-gB-JW4">
             <objects>
@@ -16,6 +24,14 @@
                     <view key="view" contentMode="scaleToFill" id="3Iy-5O-VAL">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="y4U-Wz-8De">
+                                <rect key="frame" x="180" y="148" width="240" height="128"/>
+                                <connections>
+                                    <segue destination="P9M-qC-cTD" kind="embed" id="hWe-22-ohS"/>
+                                </connections>
+                            </containerView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Charactor" id="QuH-as-SfO"/>
@@ -56,8 +72,12 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="A3f-wh-6qN">
-                                <rect key="frame" x="148" y="155" width="304" height="290"/>
-                                <state key="normal" backgroundImage="bird_maruitori"/>
+                                <rect key="frame" x="175" y="175" width="250" height="250"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="250" id="Lgo-XB-d75"/>
+                                    <constraint firstAttribute="width" constant="250" id="cKr-tA-vXY"/>
+                                </constraints>
+                                <state key="normal" backgroundImage="chara01_front_stand"/>
                                 <connections>
                                     <action selector="startButtonTouched:" destination="4OJ-OD-kK3" eventType="touchUpInside" id="hMe-of-aTI"/>
                                 </connections>
@@ -96,6 +116,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="bird_maruitori" width="304" height="290"/>
+        <image name="chara01_front_stand" width="350" height="350"/>
     </resources>
 </document>
