--- a/android/SaveTheBird/app/src/main/res/layout/activity_setting.xml
+++ b/android/SaveTheBird/app/src/main/res/layout/activity_setting.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,92 +7,164 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     android:background="@color/colorWhite"
     tools:context="com.latte_project.stb.savethebird.SettingActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="BGM"
-        android:id="@+id/bgm"
-        android:textColor="@android:color/widget_edittext_dark"
-        android:textSize="36dp"
-        android:layout_marginStart="39dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="45dp" />
+    <FrameLayout
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="324dp"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:background="@color/colorWhite"
+        android:layout_weight="0.25"
+        android:backgroundTint="@color/button_material_light"
+        tools:context="com.latte_project.stb.savethebird.SettingActivity">
 
-    <Switch
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/switch2"
-        android:layout_gravity="right"
-        android:layout_marginEnd="40dp"
-        android:layout_alignBottom="@+id/bgm"
-        android:layout_alignParentEnd="true"
-        android:textSize="18dp"
-        android:textStyle="bold"
-        android:layout_toEndOf="@+id/textView4"
-        android:layout_alignTop="@+id/bgm"
-        android:background="@color/abc_search_url_text_normal" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="SE"
-        android:id="@+id/textView2"
-        android:textColor="@android:color/widget_edittext_dark"
-        android:textSize="36dp"
-        android:layout_marginTop="67dp"
-        android:layout_below="@+id/bgm"
-        android:layout_alignStart="@+id/bgm" />
+        <!-- ボリューム -->
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Volume"
+            android:id="@+id/textView3"
+            android:textColor="@android:color/widget_edittext_dark"
+            android:textSize="32dp"
+            android:layout_centerVertical="true"
+            android:layout_alignStart="@+id/textView2"
+            android:layout_gravity="bottom|left"
+            android:layout_marginBottom="60dp"
+            android:layout_marginLeft="30dp" />
 
-    <Switch
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/switch1"
-        android:layout_gravity="right"
-        android:layout_alignBottom="@+id/textView2"
-        android:textSize="32dp"
-        android:textStyle="bold"
-        android:layout_alignStart="@+id/switch2"
-        android:layout_alignEnd="@+id/switch2"
-        android:checked="false"
-        android:background="@color/abc_search_url_text_normal" />
+        <SeekBar
+            android:layout_width="247dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/seekBar"
+            android:layout_marginTop="43dp"
+            android:layout_below="@+id/textView3"
+            android:max="99"
+            android:indeterminate="false"
+            android:layout_alignStart="@+id/textView3"
+            android:layout_alignEnd="@+id/switch1"
+            android:progress="50"
+            android:layout_gravity="center_horizontal|bottom"
+            android:layout_marginBottom="10dp" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Volume"
-        android:id="@+id/textView3"
-        android:textColor="@android:color/widget_edittext_dark"
-        android:textSize="36dp"
-        android:layout_centerVertical="true"
-        android:layout_alignStart="@+id/textView2" />
+        <Switch
+            android:layout_width="262dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/switch1"
+            android:layout_gravity="left|center_vertical"
+            android:layout_alignBottom="@+id/textView2"
+            android:textSize="32dp" android:layout_alignStart="@+id/switch2"
+            android:layout_alignEnd="@+id/switch2"
+            android:checked="true"
+            android:text="SE"
+            android:textColor="@android:color/widget_edittext_dark"
+            android:layout_marginLeft="30dp"
+            android:layout_marginBottom="-20dp" />
 
-    <SeekBar
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/seekBar"
-        android:layout_marginTop="43dp"
-        android:layout_below="@+id/textView3"
-        android:max="99"
-        android:indeterminate="false"
-        android:layout_alignStart="@+id/textView3"
-        android:layout_alignEnd="@+id/switch1"
-        android:progress="50" />
+        <Switch
+            android:layout_width="256dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/switch2"
+            android:layout_gravity="left|top"
+            android:layout_centerHorizontal="true"
+            android:checked="true"
+            android:text="BGM"
+            android:textOff="OFF"
+            android:textOn="ON"
 
-    <TextView
-        android:layout_width="wrap_content"
+            android:layout_alignBottom="@+id/bgm"
+            android:layout_alignParentEnd="true"
+            android:textSize="32dp"
+            android:layout_alignTop="@+id/bgm"
+            android:layout_marginTop="100dp"
+            android:textColor="@android:color/widget_edittext_dark"
+            android:layout_marginLeft="30dp" />
+
+        <TextView
+            android:layout_width="297dp"
+            android:layout_height="38dp"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="オプション"
+            android:id="@+id/textView4"
+            android:layout_gravity="center_horizontal|top"
+            android:background="@color/colorPrimary" />
+
+
+    </FrameLayout>
+
+    <FrameLayout
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="http://latte-project.info/"
-        android:id="@+id/textView4"
-        android:textColor="@color/colorPrimary"
-        android:layout_below="@+id/seekBar"
-        android:layout_alignStart="@+id/textView3"
-        android:layout_marginTop="67dp" />
-</RelativeLayout>
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:background="@color/colorWhite"
+        android:backgroundTint="@android:color/white"
+        tools:context="com.latte_project.stb.savethebird.SettingActivity">
+
+
+    <Button
+        android:layout_width="294dp"
+        android:layout_height="wrap_content"
+        android:text="公式サイト"
+        android:id="@+id/button"
+        android:layout_alignParentBottom="true"
+        android:layout_alignStart="@+id/seekBar"
+        android:layout_marginBottom="32dp"
+        android:layout_alignEnd="@+id/seekBar"
+        android:layout_gravity="center_horizontal|bottom" />
+
+    </FrameLayout>
+
+    <!-- action bar menu -->
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="100px"
+        >
+
+        <ImageButton
+            android:adjustViewBounds="true"
+            android:scaleType="fitCenter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:id="@+id/homeBtn"
+            android:src="@mipmap/sample_icon"
+            android:onClick="tabClick"
+            android:background="@android:color/white" />
+
+        <ImageButton
+            android:adjustViewBounds="true"
+            android:scaleType="fitCenter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:id="@+id/characterBtn"
+            android:src="@mipmap/chara"
+            android:onClick="tabClick"
+            android:background="@android:color/white" />
+
+        <ImageButton
+            android:adjustViewBounds="true"
+            android:scaleType="fitCenter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:id="@+id/settingBtn"
+            android:src="@mipmap/gear"
+            android:onClick="tabClick"
+            android:background="@android:color/white" />
+    </LinearLayout>
+
+
+</LinearLayout>
