--- a/android/SaveTheBird/app/src/main/res/values/colors.xml
+++ b/android/SaveTheBird/app/src/main/res/values/colors.xml
@@ -4,5 +4,6 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorWhite">#FFFFFF</color>
+    <color name="colorActionBar">#231815</color>
 
 </resources>
