--- a/android/SaveTheBird/app/src/main/res/layout/activity_character_select.xml
+++ b/android/SaveTheBird/app/src/main/res/layout/activity_character_select.xml
@@ -1,13 +1,124 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     android:background="@color/colorWhite"
-    tools:context="com.latte_project.stb.savethebird.CharacterSelectActivity">
+    tools:context="com.latte_project.stb.savethebird.CharacterSelectActivity"
+    android:weightSum="12">
 
-</RelativeLayout>
+    <ScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_weight="11">
+
+        <!-- action bar menu -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="197dp"
+            android:orientation="vertical"
+            android:weightSum="4"
+            >
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Name"
+                android:id="@+id/textView4"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentStart="true"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginBottom="30dp"
+                android:background="#ffefef"
+                android:layout_weight="2"
+                android:textColor="@android:color/black"
+                android:layout_marginTop="30dp"
+                android:paddingLeft="10dp"
+                />
+
+            <android.support.v4.view.ViewPager
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="fill_parent"
+                android:layout_height="280dp"
+                android:id="@+id/viewpager"
+                android:layout_margin="10dp"
+                android:layout_marginBottom="20dp" />
+            <!-- ページの下に来るようにインディケータを配置 -->
+            <!--
+            <com.example.indicator.ViewPagerIndicator
+                android:id="@+id/indicator"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/pager"
+                android:layout_marginBottom="@dimen/indicator_height" />
+ -->
+
+
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="120dp"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Medium Text"
+                android:id="@+id/textView3"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentStart="true"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginBottom="30dp"
+                android:background="#ffefef"
+                android:layout_weight="1"
+                android:textColor="@android:color/black"
+                android:padding="10dp" />
+            </LinearLayout>
+    </ScrollView>
+
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="70dp"
+        android:layout_weight="1"
+        android:background="@color/colorActionBar"
+        android:baselineAligned="false">
+
+        <ImageButton
+            android:adjustViewBounds="true"
+            android:scaleType="fitCenter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:id="@+id/homeBtn"
+            android:src="@mipmap/ic_menu_home"
+            android:onClick="tabClick"
+            android:padding="@dimen/menu_ic_padding"
+            android:background="@color/colorActionBar" />
+
+        <ImageButton
+            android:adjustViewBounds="true"
+            android:scaleType="fitCenter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:id="@+id/characterBtn"
+            android:src="@mipmap/ic_menu_chara"
+            android:onClick="tabClick"
+            android:padding="@dimen/menu_ic_padding"
+            android:background="@color/colorActionBar" />
+
+        <ImageButton
+            android:adjustViewBounds="true"
+            android:scaleType="fitCenter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:id="@+id/settingBtn"
+            android:src="@mipmap/ic_menu_setting"
+            android:onClick="tabClick"
+            android:padding="@dimen/menu_ic_padding"
+            android:background="@color/colorActionBar" />
+    </LinearLayout>
+
+</LinearLayout>
