--- a/android/SaveTheBird/app/src/main/res/layout/activity_character_select.xml
+++ b/android/SaveTheBird/app/src/main/res/layout/activity_character_select.xml
@@ -26,7 +26,7 @@
                 android:layout_height="30dp"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="Name"
-                android:id="@+id/textView4"
+                android:id="@+id/charctorName"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentStart="true"
                 android:layout_marginLeft="30dp"
@@ -62,7 +62,7 @@
                 android:layout_height="120dp"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="Medium Text"
-                android:id="@+id/textView3"
+                android:id="@+id/charactorDetail"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentStart="true"
                 android:layout_marginLeft="30dp"
