--- a/android/SaveTheBird/app/src/main/res/layout/activity_character_select.xml
+++ b/android/SaveTheBird/app/src/main/res/layout/activity_character_select.xml
@@ -23,7 +23,8 @@
 
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="30dp"
+                android:layout_height="38dp"
+                android:textSize="28dp"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="Name"
                 android:id="@+id/charctorName"
@@ -59,7 +60,8 @@
 
             <TextView
                 android:layout_width="fill_parent"
-                android:layout_height="120dp"
+                android:layout_height="150dp"
+                android:textSize="18dp"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="Medium Text"
                 android:id="@+id/charactorDetail"
